# rust-lambda-starter

./: .gitignore  Cargo.toml  README.md  pont.yaml
.github/workflows/: cd.yml
infrastructure/: api.tf  lambdas.tf  main.tf
src/bins/: hello_world.rs
