[package]
name = "rust-lambda-starter"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lambda_starter"
path = "src/main.rs"

[[bin]]
name = "hello_world"
path = "src/bins/hello_world.rs"

[dependencies]
lambda_http = { version = "0.11.0", default-features = false, features = ["apigw_http", "tracing"] }
tokio = { version = "1", features = ["macros"] }
